--- a/src/app/only-trainer-schedule/only-trainer-schedule.component.html
+++ b/src/app/only-trainer-schedule/only-trainer-schedule.component.html
@@ -1,3 +1,98 @@
-<p>
-  only-trainer-schedule works!
-</p>
+<!-- Editable table -->
+<div class="card">
+  <h3 class="card-header text-center font-weight-bold text-uppercase py-4">HORARIO ENTRENADOR</h3>
+  <div class="card-body">
+    <div id="table" class="table-editable">
+      <span class="table-add float-right mb-3 mr-2"><a href="#!" class="text-success"><i class="fas fa-plus fa-2x"
+            aria-hidden="true"></i></a></span>
+      <table class="table table-bordered table-responsive-md table-striped text-center">
+        <tr>
+          <th class="text-center">Nombre clase</th>
+          <th class="text-center">horaInicio</th>
+          <th class="text-center">horaFin</th>
+          <th class="text-center">dia</th>
+          <th class="text-center">cupos Disponibles</th>
+          <th class="text-center">Ordenar</th>
+          <th class="text-center">opciones</th>
+        </tr>
+        <tr>
+          <td class="pt-3-half" contenteditable="true">Zumba</td>
+          <td class="pt-3-half" contenteditable="true">6:00</td>
+          <td class="pt-3-half" contenteditable="true">7:00</td>
+          <td class="pt-3-half" contenteditable="true">Lunes</td>
+          <td class="pt-3-half" contenteditable="true">5</td>
+          <td class="pt-3-half">
+            <span class="table-up"><a href="#!" class="indigo-text"><i class="fas fa-long-arrow-alt-up" aria-hidden="true"></i></a></span>
+            <span class="table-down"><a href="#!" class="indigo-text"><i class="fas fa-long-arrow-alt-down"
+                  aria-hidden="true"></i></a></span>
+          </td>
+          <td>
+            <span class="table-remove"><button type="button" class="btn btn-danger btn-rounded btn-sm " (click)="showStudents()">Alumnos</button></span>
+          </td>
+        </tr>
+        
+      </table>
+    </div>
+  </div>
+</div>
+<!-- Editable table -->
+
+
+<script>
+var $TABLE = $('#table');
+var $BTN = $('#export-btn');
+var $EXPORT = $('#export');
+
+$('.table-add').click(function () {
+var $clone = $TABLE.find('tr.hide').clone(true).removeClass('hide table-line');
+$TABLE.find('table').append($clone);
+});
+
+$('.table-remove').click(function () {
+$(this).parents('tr').detach();
+});
+
+$('.table-up').click(function () {
+var $row = $(this).parents('tr');
+if ($row.index() === 1) return; // Don't go above the header
+$row.prev().before($row.get(0));
+});
+
+$('.table-down').click(function () {
+var $row = $(this).parents('tr');
+$row.next().after($row.get(0));
+});
+
+// A few jQuery helpers for exporting only
+jQuery.fn.pop = [].pop;
+jQuery.fn.shift = [].shift;
+
+$BTN.click(function () {
+var $rows = $TABLE.find('tr:not(:hidden)');
+var headers = [];
+var data = [];
+
+// Get the headers (add special header logic here)
+$($rows.shift()).find('th:not(:empty)').each(function () {
+headers.push($(this).text().toLowerCase());
+});
+
+// Turn all existing rows into a loopable array
+$rows.each(function () {
+var $td = $(this).find('td');
+var h = {};
+
+// Use the headers from earlier to name our hash keys
+headers.forEach(function (header, i) {
+h[header] = $td.eq(i).text();
+});
+
+data.push(h);
+});
+
+// Output the result
+$EXPORT.text(JSON.stringify(data));
+});
+
+
+</script>
